# routes/auth.route.js
@@ -1,6 +1,7 @@
 const express = require("express");
 const router = express.Router();
 const authController = require("../controllers/auth.controller");
+const googleController = require("../controllers/google.controller");
 const { auth } = require("../middleware/auth");
 
 router.post("/sign-in", authController.signIn);
@@ -9,4 +10,6 @@ router.post("/sign-out", auth, authController.signOut);
 router.get("/verify-link", authController.verifyLink);
 router.post("/forgot-password", authController.forgotPassword);
 router.post("/reset-password", authController.resetPassword);
+router.get("/google", googleController.redirectAuth);
+router.get("/google/callback", googleController.googleCallback);
 module.exports = router;
