# swagger/paths.yaml
@@ -59,7 +59,52 @@ paths:
           content:
            application/json:
             schema:
-              $ref: '#/components/schemas/ValidateResponse'          
+              $ref: '#/components/schemas/ValidateResponse' 
+    /auth/google:
+    get:
+      tags:
+        - auth
+      description: Sign In using google account
+      operationId: sign-in-gg
+      responses:
+        '200':
+          description: User signed in successfully
+          content:
+           application/json:
+            schema:
+               type: object
+               properties:
+                success:
+                 type: string
+                 example: true
+                data:
+                 type: object
+                 properties:
+                   user:
+                    type: object
+                    $ref: '#/components/schemas/User'
+                   access_token:
+                     type: string
+                     example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOjUsImlhdCI6MTcxNDk2NjIxNCwiZXhwIjoxNzE0OTY5ODE0fQ.9TGf42_7umYPLE2pXkOdQ-HQgreKKK5Nwm6OyZIRwIU"
+                status:
+                 type: integer
+                 example: 200
+                message:
+                 type: string
+                 example: "ok"
+             
+        '404':
+          description: Not Found
+          content:
+           application/json:
+            schema:
+              $ref: '#/components/schemas/ErrorResponse'
+        '422':
+          description: Error Validate
+          content:
+           application/json:
+            schema:
+              $ref: '#/components/schemas/ValidateResponse'             
    /auth/sign-up:
     post:
       tags:
